# claire

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ColdConfig.h.in  LICENSE  README.md  README.txt  config.mk  filelist.mk  log.txt  makefile  makefile.mk  makefile_dbl  makefile_gpu  makefile_p9  runcold-largescale-syn.py  todo.sh
apps/: CMakeLists.txt  benchmark.cpp  checkclaire.cpp  claire.cpp  clairetools.cpp  debug.cpp  par_interp3_driver.cpp  postproc.cpp  regbenchmark.cpp  regtools.cpp  runcoldreg.cpp  runcoldreg.h  test.cpp
cmake/: BuildDependencies.cmake  COLD.cmake  FindACCFFT.cmake  FindFFTW.cmake  FindMKL.cmake  FindMORTON.cmake  FindNIFTI.cmake  FindZLIB.cmake  PreventInSourceBuild.cmake  basicFind.cmake
cmake/modules/: FindMKL.cmake
config/: files.mk  setup.mk  setup.mk.power9v100
doc/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-EXTLIBS.md  README-INSTALL-QUICK.md  README-INSTALL.md  README-INSTALLATION.md  README-NEWS.md  README-REFERENCES.md  README-RUNME.md  README-TACC.md  advanced-help.txt  help.txt
doc/examples/: check4vel.sh  longhorn_mgpu.slurm  runclaire-bcont.sh  runclaire-brains.sh  runclaire-bsearch.sh  runclaire-syn.sh  runclaire01.sh  runclaire02.sh  runclaire03.sh  runclaire04.sh  runclaire05.sh  runclaire06.sh  runtools01.sh  runtools02.sh  runtools03.sh
doc/paper/: paper.bib  paper.md
include/: BenchmarkOpt.hpp  CLAIRE.hpp  CLAIREBase.hpp  CLAIREDivReg.hpp  CLAIREInterface.hpp  CLAIREStokes.hpp  CLAIREUtils.hpp  CLPBenchmark.hpp  ContinuityEquation.hpp  DataReadWriteRegistration.h  DeformationFields.hpp  DeformationKernel.hpp  Differentiation.hpp  DifferentiationFD.hpp  DifferentiationKernel.hpp  DifferentiationSM.hpp  DifferentiationSMGPU.hpp  DistanceMeasure.hpp  DistanceMeasureKernel.hpp  DistanceMeasureNCC.hpp  DistanceMeasureSL2.hpp  DistanceMeasureSL2aux.hpp  DomainDecomposition.hpp  GhostPlan.hpp  KernelUtils.hpp  KrylovInterface.hpp  KrylovInterfaceReg.hpp  L2Distance.hpp  LargeDeformationRegistration.h  LargeDeformationRegistration.hpp  Logger.hpp  MemoryUtils.hpp  MultiLevelPyramid.hpp  OffsetPointer.hpp  OptProbRegistration.hpp  OptimalControlRegistration.h  OptimalControlRegistration.hpp  OptimalControlRegistrationBase.hpp  OptimalControlRegistrationIC.h  OptimalControlRegistrationIC.hpp  (+92 more)
legacy-build/: makefile  makefile_gpu
legacy-build/config/: setup.mk
scripts/: cuda_fwdsolve_benchmark.e  job_submission.sh  niftiutils.py  run-gridcont-advanced.sh  run-gridcont.sh  run-multicomponent.sh  run_script.sh  run_script_cbica.sh  run_script_frontera.sh  test-pyclaire.py  utils.py
src/: BenchmarkOpt.cpp  CLAIRE.cpp  CLAIREBase.cpp  CLAIREDivReg.cpp  CLAIREInterface.cpp  CLAIREStokes.cpp  CLAIREUtils.cpp  CLAIREUtilsKernel.cpp  CLAIREUtilsKernel.cu  CLPBenchmark.cpp  DataOut.cpp  DataReadWriteRegistration.cpp  DeformationFields.cpp  Differentiation.cpp  DifferentiationFD.cpp  DifferentiationSM.cpp  DifferentiationSMGPU.cpp  DistanceMeasure.cpp  DistanceMeasureNCC.cpp  DistanceMeasureSL2.cpp  DistanceMeasureSL2aux.cpp  DomainDecomposition.cpp  GhostPlan.cpp  Interp3_Plan.cpp  Interp3_Plan_GPU.cpp  KrylovInterface.cpp  KrylovInterfaceReg.cpp  L2Distance.cpp  LargeDeformationRegistration.cpp  Logger.cpp  MultiLevelPyramid.cpp  OptProbRegistration.cpp  OptimalControlRegistration.cpp  OptimalControlRegistrationBase.cpp  OptimalControlRegistrationIC.cpp  OptimalControlRegistrationRIC.cpp  OptimalControlRegistrationRelaxedIC.cpp  OptimizationProblem.cpp  OptimizationProblemRegistration.cpp  Optimizer.cpp  (+56 more)
src/DeformationFields/: DeformationFields.cpp  DeformationKernel.cpp  DeformationKernel.cu  DeformationKernel.txx
src/Differentiation/: Differentiation.cpp  DifferentiationFD.cpp  DifferentiationKernel.cpp  DifferentiationKernel.cu  DifferentiationKernel.txx  DifferentiationSM.cpp  TextureDifferentiationKernel.cu
src/DistanceMeasure/: DistanceMeasure.cpp  DistanceMeasureKernel.cpp  DistanceMeasureKernel.cu  DistanceMeasureNCC.cpp  DistanceMeasureSL2.cpp  DistanceMeasureSL2aux.cpp  distance_kernel.cu
src/Interface/: PythonInterface.cpp  pyclaire.i
src/Interpolation/: Interp3_Plan.cpp  Interp3_Plan_GPU.cpp  Interp3_Plan_GPU.cu  Interp3_Plan_GPU_kernel.cu  gpu_interp3.cpp  interp3.cpp  interp3_gpu_new.cu
src/Regularization/: Regularization.cpp  RegularizationH1.cpp  RegularizationH1SN.cpp  RegularizationH2.cpp  RegularizationH2SN.cpp  RegularizationH3.cpp  RegularizationH3SN.cpp  RegularizationKernel.cpp  RegularizationKernel.cu  RegularizationKernel.txx  RegularizationL2.cpp
src/SemiLagrangian/: SemiLagrangian.cpp  SemiLagrangianGPU.cpp  SemiLagrangianGPUNew.cpp  SemiLagrangianKernel.cu  SemiLagrangianKernel.txx
src/Solver/: ContinuityEquation.cpp  TransportEquationRK2.cpp  TransportEquationSL.cpp  TransportKernel.cpp  TransportKernel.cu  TransportKernel.txx  TransportProblem.cpp
src/Spectral/: Spectral.cpp  SpectralKernel.cpp  SpectralKernel.cu  SpectralKernel.txx  mpicufft.cpp
src/TransportSolver/: TransportEquationSL.cpp  TransportKernel.cpp  TransportKernel.cu  TransportProblem.cpp
src/TwoLevel/: TwoLevel.cpp  TwoLevelFFT.cpp  TwoLevelFinite.cpp  TwoLevelKernel.cu
src/UnitTests/: SyntheticData.cpp  TestClaire.cpp  TestDifferentiation.cpp  TestInterpolation.cpp  TestRegularization.cpp
